[package]
name = "neon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
evm-loader = { path = "../program", default-features = false, features = ["log"] }
solana-sdk = "=1.16.13"
solana-client = "=1.16.13"
serde = "1.0.186"
serde_json = "1.0.85"
ethnum = { version = "1.4", default-features = false, features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.2"
axum = "0.6"
tower = { version = "0.4", features = ["make"] }
neon-lib = { path = "../lib" }
tower-request-id = "0.2.1"
http = "0.2.9"
hyper = "0.14.27"
tower-http = { version = "0.4.4", features = ["trace"] }
hex = "0.4.2"
