[package]
name = "neon-api"
version = "1.11.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
evm-loader = { path = "../program", default-features = false, features = ["log"] }
solana-sdk = "=1.17.24"
solana-client = "=1.17.24"
serde = "1.0.186"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
ethnum = { version = "1.4", default-features = false, features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.2"
tower = { version = "0.4", features = ["make"] }
neon-lib = { path = "../lib" }
actix-web = "4.4.0"
actix-request-identifier = "4.1.0"
hex = "0.4.2"
build-info = { version = "0.0.31", features = ["serde"] }

[build-dependencies]
build-info-build = "0.0.31"
