[package]
name = "neon-cli"
version = "1.3.0-dev"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
evm-loader = { path = "../program", default-features = false, features = ["log"] }
solana-sdk = "=1.14.20"
solana-client = "=1.14.20"
solana-clap-utils = "=1.14.20"
solana-cli-config = "=1.14.20"
hex = "0.4.2"
serde = "1.0.186"
serde_json = "1.0.85"
log = "0.4.17"
fern = "0.6"
ethnum = { version = "1.4", default-features = false, features = ["serde"] }
tokio = { version = "1", features = ["full"] }
neon-lib = { path = "../lib" }
