[package]
name = "neon-cli"
version = "1.11.0-dev"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
evm-loader = { path = "../program", default-features = false, features = ["log"] }
solana-sdk = "=1.17.24"
solana-client = "=1.17.24"
solana-clap-utils = "=1.17.24"
solana-cli-config = "=1.17.24"
hex = "0.4.2"
serde = "1.0.186"
serde_json = { version = "1.0.114", features = ["preserve_order"] }
log = "0.4.17"
fern = "0.6"
ethnum = { version = "1.4", default-features = false, features = ["serde"] }
tokio = { version = "1", features = ["full"] }
neon-lib = { path = "../lib" }
build-info = { version = "0.0.31", features = ["serde"] }

[build-dependencies]
build-info-build = "0.0.31"
