[package]
name = "faucet"
description = "NeonLabs Faucet Service"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
repository = "https://github.com/neonlabsorg/neon-evm/evm_loader/faucet"
version = "0.5.4-dev"
edition = "2018"

[dependencies]
actix-cors = { version = "0.6.0-beta.8", default-features = false }
actix-web = { version = "4.0.0-beta.19", default-features = false }
color-eyre = "0.5"
derive-new = "0.5"
ed25519-dalek = "1.0"
evm-loader = { path = "../program", default_features = false, features = ["no-entrypoint"] }
hex = "0.4"
lazy_static = "1.4"
minimad = "0.9"
md5 = "0.7"
nix = "0.23"
num_cpus = "1.13"
secp256k1 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.7"
solana-sdk = "1.7"
spl-associated-token-account = { version = "1.0", default_features = false, features = ["no-entrypoint"] }
spl-token = { version = "3.2", default_features = false, features = ["no-entrypoint"] }
structopt = "0.3"
termimad = "0.20"
thiserror = "1.0"
tokio = { version = "1.15", default_features = false, features = ["rt"] }
toml = "0.5"
tracing = "0.1.29"
# tracing-subscriber with disabled feature "ansi" to force colorless logs
tracing-subscriber = { version = "0.2.25", default_features = false, features = ["env-filter", "fmt", "tracing-log", "chrono", "smallvec", "parking_lot"] }
web3 = "0.17"
