[package]
name = "faucet"
description = "NeonLabs Faucet Service"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
repository = "https://github.com/neonlabsorg/neon-evm/evm_loader/faucet"
version = "0.5.4-dev"
edition = "2018"

[dependencies]
actix-cors = { version = "0.6.0-beta.8", default-features = false }
actix-web = { version = "4.0.0-beta.21", default-features = false }
eyre = "0.6.6"
derive-new = "0.5.9"
ed25519-dalek = "1.0.1"
evm-loader = { path = "../program", default_features = false, features = ["no-entrypoint"] }
hex = "0.4.3"
lazy_static = "1.4.0"
minimad = "0.9.0"
md5 = "0.7.0"
nix = "0.23.1"
num_cpus = "1.13.1"
secp256k1 = "0.20.3"
serde = { version = "1.0.135", default_features = false }
serde_json = "1.0.75"
solana-client = "1.7.9"
solana-sdk = "1.7.9"
spl-associated-token-account = { version = "1.0.3", default_features = false, features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", default_features = false, features = ["no-entrypoint"] }
structopt = "0.3.26"
termimad = "0.20.0"
thiserror = "1.0.30"
time = { version = "0.3.6", default_features = false, features = ["macros"] }
tokio = { version = "1.15.0", default_features = false, features = ["rt"] }
toml = "0.5.8"
tracing = "0.1.29"
# tracing-subscriber with disabled feature "ansi" to force colorless logs
tracing-subscriber = { version = "0.3.6", default_features = false, features = ["env-filter", "std", "fmt", "json", "time", "local-time", "tracing-log", "smallvec", "parking_lot"] }
web3 = "0.17.0"
