[package]
name = "faucet"
description = "NeonLabs Faucet Service"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
repository = "https://github.com/neonlabsorg/neon-evm/evm_loader/faucet"
version = "0.6.0-dev"
edition = "2018"

[dependencies]
actix-cors = { version = "0.6", default-features = false }
actix-web = { version = "4.0.0-rc.3", default-features = false, features = ["macros"] }
chrono = "0.4"
derive-new = "0.5"
ed25519-dalek = "1.0"
eyre = "0.6"
futures-locks = "0.7"
goblin = "0.5"
hex = "0.4"
lazy_static = "1.4"
minimad = "0.9"
md5 = "0.7"
nix = "0.23"
num_cpus = "1.13"
secp256k1 = "0.20"
serde = { version = "1.0", default_features = false }
serde_json = "1.0"
solana-client = "=1.8.12"
solana-sdk = "=1.8.12"
spl-associated-token-account = { version = "1.0", default_features = false, features = ["no-entrypoint"] }
spl-token = { version = "3.2", default_features = false, features = ["no-entrypoint"] }
structopt = "0.3"
termimad = "0.20"
thiserror = "1.0"
time = { version = "0.3", default_features = false, features = ["macros"] }
tokio = { version = "1.17", default_features = false, features = ["rt"] }
toml = "0.5"
tracing = "0.1"
tracing-log = "0.1"
# tracing-subscriber with disabled feature "ansi" to force colorless logs
tracing-subscriber = { version = "0.3", default_features = false, features = ["env-filter", "std", "fmt", "json", "time", "local-time", "tracing-log", "smallvec", "parking_lot"] }
web3 = "0.17"
