[package]
name = "neon-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3.1"
evm-loader = { path = "../program", default-features = false, features = ["log", "async-trait", "serde_json"] }
solana-sdk = "=1.16.16"
solana-client = "=1.16.16"
solana-clap-utils = "=1.16.16"
solana-cli-config = "=1.16.16"
solana-cli = "=1.16.16"
solana-transaction-status = "=1.16.16"
spl-token = { version = "~3.5", default-features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.1", default-features = false, features = ["no-entrypoint"] }
bs58 = "0.4.0"
hex = "0.4.2"
serde = "1.0.186"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
log = "0.4.17"
rand = "0.8"
ethnum = { version = "1.4", default-features = false, features = ["serde"] }
goblin = { version = "0.6.0" }
scroll = "0.11.0"
tokio = { version = "1", features = ["full"] }
clickhouse = "0.11.5"
tracing = "0.1"
async-trait = "0.1.73"
build-info = "0.0.31"

[build-dependencies]
build-info-build = "0.0.31"
