[package]
name = "macros"
version = "0.5.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
bs58 = "0.4.0"
proc-macro2 = "1.0.19"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
