[package]
name = "evm-loader-macro"
version = "1.0.0"
edition = "2021"
description = "Neon EVM loader"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
itertools = "0.10.5"
bs58 = "0.4"
serde = { version = "1.0.145", features = [ "derive" ] }
toml = "0.5.9"
