
# Note: This crate must be built using cargo build-bpf

[package]
name = "evm-loader"
version = "0.15.9"
description = "Neon EVM loader"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
edition = "2021"
include = ["config/*.toml"]

[features]
#! The next feature defines configurations for deploys on different blockchains
## Builds NeonEVM for testing with goverment system
govertest = []
## Builds NeonEVM for mainnet deployment
mainnet = []
## Builds NeonEVM for testnet deployment
testnet = []
## Builds NeonEVM for devnet deployment
devnet = []

## Builds NeonEVM program for `emergency` mode. In this mode, NeonEVM doesn't process
## any transaction and return error `ProgramError::InvalidInstructionData` with comment
## `Emergency image: all instructions are rejected`. This feature can be used with
## the feature which defines configuration. In this case, the resulting image will
## contain a configuration for appropriated deployment.
emergency = []

## Builds program without debug logs
no-logs = []

## Do not include entrypoint (for include in other application)
no-entrypoint = []
test-bpf = []
custom-heap = []
default = ["custom-heap"]
tracing = ["environmental"]

[dependencies]
linked_list_allocator = { version = "0.10", default_features = false }
evm-loader-macro = { path = "../program-macro" }
solana-program = { version = "1.14", default_features = false }
spl-token = { version = "3.5", default_features = false, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", default_features = false, features = ["no-entrypoint"] }
mpl-token-metadata = { version = "=1.3.2", default_features = false, features = ["no-entrypoint"] }
thiserror = "1.0"
arrayref = "0.3.6"
hex = "0.4.2"
ripemd = "0.1"
rlp = "0.5"
static_assertions = "1"
borsh = "0.9"
bincode = "1"
serde_bytes = "0.11"
serde = { version = "1", features = ["derive"] }
ethnum = { version = "1", default_features = false, features = [ "serde" ] }
const_format = { version = "0.2.21" }
cfg-if = { version = "1.0" }
log = { version = "0.4", default-features = false }
environmental = { version = "1", default-features = false, optional = true}

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
