[package]
name = "proxy-caller-program"
version = "0.10.0-dev"
description = "Neon EVM loader"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]
edition = "2018"

[features]
alpha = []
mainnet = []
testnet = []
devnet = []
no-logs = []
no-entrypoint = []
test-bpf = []
custom-heap = []

[dependencies]
solana-program = "=1.10.30"

[dev-dependencies]
solana-program-test = "=1.10.30"
solana-sdk = "=1.10.30"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
