[package]
name = "sender"
version = "0.1.0"
authors = ["Cyber-Core Maintainers <maintainers@cyber-core.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
clap = "2.33.3"
solana-sdk = "=1.8.2"
solana-client = "=1.8.2"
solana-clap-utils = "=1.8.2"
solana-cli-config = "=1.8.2"
solana-cli = "=1.8.2"
solana-cli-output = "=1.8.2"
solana-transaction-status = "=1.8.2"
solana-program = { version = "1.8.2", default_features = false }
bs58 = "0.4.0"
hex = "0.4.2"
evm-loader = { path = "../../program", default_features = false }
evm = { path = "../../rust-evm", version = "0.18.0", default_features = false }
bincode = "1.3.3"
