[workspace]

[package]
name = "storage-to-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
arrayref = "0.3.6"
evm-loader = { path = "../../program", default-features = false }
evm-core = { path = "../../rust-evm/core", default-features = false, features = ["with-serde"] }
lazy_static = "1.4.0"
remove_dir_all = "0.5.0"
reqwest = "0.11.10"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.80"
solana-account-decoder = "1.9.12"
solana-program = "1.9.12"
solana-sdk = "1.9.12"
solana-transaction-status = "1.9.12"
solana-client = "1.9.12"

